--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ milestone2/node_modules/jquery
 milestone2/node_modules/express
 milestone2/node_modules/jade
 milestone2/node_modules/.bin
+milestone2/node_modules/redis
