--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 node
-milestone1/node_modules/jquery
-milestone1/node_modules/express
-milestone1/node_modules/jade
-milestone1/node_modules/.bin
-milestone2/node_modules/jquery
-milestone2/node_modules/express
-milestone2/node_modules/jade
-milestone2/node_modules/.bin
-milestone2/node_modules/redis
+milestone1/node_modules/*
+milestone2/node_modules/*
+*.rdb
+*.log
+*~
+
